--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,6 +22,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BV'
 - !lcsh 'Christian life'
+- GITenberg
 title: A Ryght Profytable Treatyse Compendiously Drawen Out Of Many and Dyvers Wrytynges
   Of Holy Men
 url: http://www.gutenberg.org/ebooks/16779
